--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,6 @@
-= bitcoin-client {<img src="https://travis-ci.org/sinisterchipmunk/bitcoin-client.png?branch=master" alt="Build Status" />}[https://travis-ci.org/sinisterchipmunk/bitcoin-client] {<img src="https://codeclimate.com/github/sinisterchipmunk/bitcoin-client.png" />}[https://codeclimate.com/github/sinisterchipmunk/bitcoin-client] {<img src="https://coveralls.io/repos/sinisterchipmunk/bitcoin-client/badge.png" alt="Coverage Status" />}[https://coveralls.io/r/sinisterchipmunk/bitcoin-client]
+= bitcoin-client 
+
+NOTE: this is a fork of a very "old" but widely used library (gem) to interact with a bitcoin core node via RPC in ruby 
 
 Provides a Ruby library to the complete Bitcoin JSON-RPC API. Implements all methods listed
 at {https://en.bitcoin.it/wiki/Original_Bitcoin_client/API_Calls_list}[https://en.bitcoin.it/wiki/Original_Bitcoin_client/API_Calls_list].
